--- a/css/styles.css
+++ b/css/styles.css
@@ -19,8 +19,9 @@ h3 {
 }
 a {
   text-decoration: none;
-  color: black;
+  color: var(--primary-colour);
   font-size: 36px;
+  padding-top: 30px;
 }
 img {
   display: block;
